# docs/swagger.yaml
@@ -393,6 +393,15 @@ definitions:
         description: WOR channel.
         type: integer
     type: object
+  model.Certs:
+    properties:
+      certificate:
+        type: string
+      expires_at:
+        type: string
+      key:
+        type: string
+    type: object
   structpb.Struct:
     properties:
       fields:
@@ -468,6 +477,29 @@ paths:
         "500":
           description: Internal Server Error
       summary: Event
+  /gateways/{hub_id}/cert:
+    post:
+      description: Generates a new certificate
+      parameters:
+      - description: Hub ID
+        in: path
+        name: hub_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: generated certificate
+          schema:
+            $ref: '#/definitions/model.Certs'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: Generate Certificate
+      tags:
+      - Gateways
   /provision:
     post:
       consumes:
